[package]
name = "zui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbus = {path="../rbus"}
async-trait = "0.1.51"
anyhow = "1.0.44"
tokio = { version = "1.11.0", features = ["full"] }
tui = "0.18"
crossterm = "0.23"
serde = {version = "1.0", features = ["derive"] }
log = "0.4"
psutil = "3.2.2"
ipnet = "2.5.0"
bytes = "1.2.1"
serde_with = "2.0.0"