[package]
name = "zos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path ="src/mod.rs"

[[bin]]
path = "src/bin/main.rs"
name = "zos"

[dependencies]
rbus = {git="https://github.com/threefoldtech/rbus", branch="main"}
async-trait = "0.1.51"
anyhow = "1.0.44"
tokio = { version = "1.11.0", features = ["full"] }
tui = "0.18"
crossterm = "0.23"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
ipnet = "2.5.0"
bytes = "1.2.1"
serde_bytes = "0.11.5"
clap-v3 = "3.0.0-beta.1"
lazy_static = "1.4.0"
shlex = "1.1.0"
thiserror = "1.0"
mockall = "0.11"
semver = "1.0.13"
uuid = { version = "1.1", features = ["v4"] }
ioctls = "0.6"
reqwest="0.11.11"
http="0.2.8"
execute = "0.2.11"
md-5 = "0.10.4"
hex = "0.4.3"
base16ct = {version = "0.1.1", features = ["alloc"]}
tempdir = "0.3.7"
tempfile= "3.3.0"
srmw = "0.1.1"
filepath = "0.1.2"
checksums = "0.9.1"
async-recursion = "1.0.0"

[dev-dependencies]
hex = "0.4.3"
rmp-serde = "1.1.0"
hexdump = "0.1.1"
simple_logger = "2.3"
rand = "0.8.5"
tempfile = "3"
